# Hochleistungsrechnen

./: .gitignore  CMakeLists.txt  README.md  benchmarking.md  generate_maze.py  lid_driven_cavity.csv  presentation.md  project-context.txt  scaling-results.csv  template.txt  velocity_profile.csv  viscosity.csv
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  main.cpp  plot-benchmark-communication.py  scaling_data.csv  scaling_data_gpu_a100_short.csv  scaling_data_gpu_h100.csv
fluid_simulation/: CMakeLists.txt
fluid_simulation/includes/: field.h  simulation.h  simulation_1d.h  simulation_2d.h
fluid_simulation/src/: field.cpp  simulation.cpp  simulation_1d.cpp  simulation_2d.cpp
interactive/: CMakeLists.txt  main.cpp
milestone02/: CMakeLists.txt  main.cpp
milestone02/includes/: field.h
milestone02/src/: field.cpp
milestone04/: CMakeLists.txt  main.cpp  plot.py  plot_viscosity.py  viscosity.csv
milestone05/: CMakeLists.txt  centerline_profile.csv  lid_driven_cavity.csv  main.cpp  plot.py  video_export.cpp  visualisation.cpp
milestone06/: CMakeLists.txt  graph.py  main.cpp
performance_benchmarks/: parse_slurm.py  run-bwunicluster.job  run.job  scaling_results.csv  schedule-jobs.sh  slurm_summary.csv  submit-benchmarks.sh  visualize_slurm.py
project/: CMakeLists.txt  main.cpp
project_video_export/: CMakeLists.txt  main.cpp
project_video_export_presentation/: CMakeLists.txt  main.cpp
serial/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_lbm.cpp
validation/: CMakeLists.txt  main.cpp  mass_conservation.csv  plot.py  relaxation.csv
